@@ -7,6 +7,10 @@ An overview of the relevant changes in new, and older, releases.
 Version 1.3.1 (2005-04-??)
 --------------------------
 
+- Twisted examples changed to use threadedselectreactor instead
+  of cfreactor.  cfreactor is deprecated.  Needs Twisted newer
+  than 2.0 (currently svn r13575 or later).
+
 - ``objc.inject`` now injects on main thread by default,
   takes third useMainThread argument to change this behavior.
   Effectively a complete rewrite which should be more correct
